<resources>
    <string name="app_name">PASADA(Driver)</string>
    <string name="back_button">Back Button</string>
    <string name="enter_note_for_driver">Enter note for driver</string>
    <string name="details">Details</string>
    <string name="kyan_oclares">Kyan Oclares</string>
    <string name="trip_fare">Trip Fare</string>
    <string name="bukluran_court">Bukluran Court</string>
    <string name="fairview_terraces">Fairview Terraces</string>
    <string name="_4">4</string>
    <string name="drop_off">Drop Off</string>
    <string name="p50_00">P50</string>
    <string name="confirm_booking">Confirm Booking</string>
    <string name="notes">Notes</string>
    <string name="passenger">Passenger</string>
    <string name="pick_up">Pick Up</string>
    <string name="todo">TODO</string>
    <string name="you_are_offline">You are Offline!</string>
    <string name="pasada">PASADA</string>
    <string name="menu">Menu</string>
    <string name="earned">Earned</string>
    <string name="p200">P200</string>
    <string name="metric">Metric</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
    <string name="offline">Offline</string>
    <string name="image_driver">image_driver</string>
    <string name="log_out">Log Out</string>
    <string name="saved_places">Saved Places</string>
    <string name="profile">Profile</string>
    <string name="online">Online</string>
    <string name="view_all">View All</string>
    <string name="image_customer">image_customer</string>
    <string name="view">View</string>
    <string name="login">Login</string>
    <string name="email_username">Email/Username</string>
    <string name="enter_your_email_or_username">Enter your email or username</string>
    <string name="password">Password</string>
    <string name="sure_about_the_information">Sure about the information?</string>
    <string name="lt"><![CDATA[<]]></string>
    <string name="confirm">Confirm</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="you_have_3_new_requests">You have 3 new requests.</string>
    <string name="mode">Mode</string>
    <string name="padala">Padala</string>
    <string name="hatid_sundo">Hatid-Sundo</string>
    <string name="reject">Reject</string>
    <string name="reject_booking">Reject Booking</string>
    <string name="edit_icon">edit icon</string>
</resources>