<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="16dp"
    android:background="#F5F5F5"
    android:fillViewport="true"
    tools:context=".LoginPage">

    <!-- Main Layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Back Button Section -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/backButton"
                android:layout_width="48dp"
                android:layout_height="match_parent"
                android:text="@string/lt"
                android:textSize="30sp"
                android:textStyle="bold"
                android:gravity="center"
                android:clickable="true"
                android:focusable="true"
                android:padding="8dp"
                android:textColor="@color/black"/>
        </LinearLayout>

        <!-- Title -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:textColor="@android:color/black"/>

        <!-- Email/Username -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email_username"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_marginTop="130dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:autofillHints=""
            android:hint="@string/enter_your_email_or_username"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textColorHint="#546E7A"
            tools:ignore="VisualLintTextFieldSize" />

        <!-- Password -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:autofillHints=""
            android:hint="@string/enter_your_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColorHint="#546E7A"
            tools:ignore="VisualLintTextFieldSize" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sure_about_the_information"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"
            android:layout_marginTop="155dp"
            android:layout_marginBottom="10dp"/>

        <!-- Confirm Button -->
        <Button
            android:id="@+id/confirmButton"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@drawable/button_background"
            android:text="@string/confirm"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:paddingLeft="32dp"
            android:paddingRight="32dp"
            app:backgroundTint="@null"
            tools:ignore="VisualLintButtonSize" />  <!-- Ensuring no background tint is applied -->



    </LinearLayout>
</LinearLayout>
