<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HatidSundoDetails"
    android:background="#F5F5F5">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Red Square -->
        <RelativeLayout
            android:id="@+id/red_square"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="#8C1C13">

            <!-- Text: Hatid-Sundo -->
            <TextView
                android:id="@+id/text_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/details"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_centerInParent="true" />

            <!-- Back Button -->
            <ImageButton
                android:id="@+id/back_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="16dp"
                android:background="@drawable/button_back_background"
                android:contentDescription="@string/back_button"
                android:padding="8dp"
                android:src="@drawable/ic_back_arrow"
                tools:ignore="RedundantDescriptionCheck" />
        </RelativeLayout>

        <!--    Header for picture, name, fare price-->
        <RelativeLayout
            android:id="@+id/trip_fare"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_below="@id/red_square"
            android:background="#D9D9D9">

            <ImageView
                android:id="@+id/profile_picture"
                android:layout_width="89dp"
                android:layout_height="90dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="15dp"
                android:background="@drawable/square_profile_placeholder"
                android:contentDescription="@string/todo"
                android:scaleType="centerCrop"
                tools:ignore="ImageContrastCheck" />
            <!--    android:src="@drawable/ic_profile_square_placeholder"/>-->

            <TextView
                android:id="@+id/customer_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/profile_picture"
                android:text="@string/kyan_oclares"
                android:layout_marginStart="25dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="#000000"
                tools:ignore="RelativeOverlap" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/customer_name"
                android:orientation="vertical"
                android:layout_marginTop="43dp"
                android:layout_marginStart="60dp">

                <TextView
                    android:id="@+id/fare_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/p50_00"
                    android:textColor="#000000"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    tools:ignore="TextSizeCheck" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/fare_price"
                    android:text="@string/trip_fare" />
            </LinearLayout>



        </RelativeLayout>

        <!--    Divider for trip-->
        <View
            android:id="@+id/divider_line_trip"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_below="@id/trip_fare"
            android:background="#D9D9D9" />

        <!--    Pick Up-->
        <RelativeLayout
            android:id="@+id/pick_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/divider_line_trip">

            <TextView
                android:id="@+id/pick_up_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pick_up"
                android:layout_margin="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/pick_up_text"
                android:layout_marginStart="10dp"
                android:text="@string/bukluran_court"
                android:textColor="#000000"
                android:textSize="23sp"
                android:textStyle="bold"
                tools:ignore="TextSizeCheck" />
        </RelativeLayout>

        <!--    Divider for pickup-->
        <View
            android:id="@+id/divider_line_pickup"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_below="@id/pick_up"
            android:background="#D9D9D9" />

        <!--    Drop off-->
        <RelativeLayout
            android:id="@+id/drop_off"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_below="@id/divider_line_pickup"
            tools:ignore="TextSizeCheck">

            <TextView
                android:id="@+id/drop_off_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/drop_off" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/drop_off_text"
                android:layout_marginStart="10dp"
                android:text="@string/fairview_terraces"
                android:textColor="#000000"
                android:textSize="23sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <!--    Divider for drop off-->
        <View
            android:id="@+id/divider_line_dropoff"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_below="@id/drop_off"
            android:background="#D9D9D9" />

        <!--    Passenger-->
        <RelativeLayout
            android:id="@+id/passenger"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/divider_line_dropoff">

            <TextView
                android:id="@+id/passenger_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/passenger"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_4"
                android:layout_below="@id/passenger_text"
                android:layout_marginStart="10dp"
                android:textSize="23sp"
                android:textColor="#000000"
                android:textStyle="bold"
                android:layout_marginBottom="10dp"/>
        </RelativeLayout>

        <!--    Divider for Passenger-->
        <View
            android:id="@+id/divider_line_passenger"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_below="@id/passenger"
            android:background="#D9D9D9" />

        <!--    Passenger-->
        <RelativeLayout
            android:id="@+id/mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/divider_line_passenger">

            <TextView
                android:id="@+id/mode_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mode"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Hatid-Sundo"
                android:layout_below="@id/mode_text"
                android:layout_marginStart="10dp"
                android:textSize="23sp"
                android:textColor="#000000"
                android:textStyle="bold"
                android:layout_marginBottom="10dp"/>
        </RelativeLayout>

        <!--    Divider for Passenger-->
        <View
            android:id="@+id/divider_line_mode"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_below="@id/mode"
            android:background="#D9D9D9" />

        <!--    Notes-->
        <RelativeLayout
            android:id="@+id/notes"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_below="@id/divider_line_mode">

            <TextView
                android:id="@+id/notes_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notes"
                android:layout_margin="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/notes_text"
                android:layout_marginStart="10dp"
                android:text="@string/enter_note_for_driver"
                android:textColor="#000000"
                android:textSize="15sp"
                android:textStyle="normal"
                tools:ignore="TextSizeCheck" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/divider_line_notes"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:padding="16dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/confirm_booking"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:layout_marginEnd="8dp"
                android:background="@drawable/button_cornered_redbg"
                android:text="@string/confirm_booking"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:padding="12dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/reject_booking"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:layout_marginStart="8dp"
                android:background="@drawable/button_background"
                android:text="@string/reject_booking"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:padding="12dp" />
        </LinearLayout>

        <!--    Divider for Notes-->
        <View
            android:id="@+id/divider_line_notes"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_below="@id/notes"
            android:background="#D9D9D9" />
    </RelativeLayout>

</ScrollView>

